# inventory-mcp-server

./: README.md  pyproject.toml  render.yaml  server.py  wrangler.toml
data/: maharashtra_wholesale_medicine_purchase.csv
deployed/.github/workflows/: deploy.yml
medicine-mcp-server/src/: worker.py
