[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "medicine-mcp-server"
version = "0.1.0"
description = "FastMCP server for Maharashtra wholesale medicine purchase analysis"
authors = ["Your Name <you@example.com>"]
package-mode = false  # <-- This MUST be under [tool.poetry]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastmcp = ">=3.0.0"
pandas = ">=2.0.0"
google-generativeai = ">=0.8.0"
openapi-pydantic = ">=0.5.1"
fastapi = ">=0.100.0"
uvicorn = ">=0.20.0"
